fix overflow

--- a/src/style/layout/l-section/_l-mission.sass
+++ b/src/style/layout/l-section/_l-mission.sass
@@ -1,5 +1,7 @@
 .l-mission
   @extend .l-section
+  overflow: hidden
+  
   &__row
     display: flex
     @include tablet-down
